force-app/main/default/objects/Eval_Request__c/fields/Fed_Ex__c.field-meta.xml
<CustomField>
    <fullName>Fed_Ex__c</fullName>
    <description>Fed Ex Link</description>
    <formula>if(isblank(Fed_Ex_Tracking__c)=true,&apos;Not Shipped&apos;,

HYPERLINK(&apos;http://www.fedex.com/Tracking?ascend_header=1&amp;clienttype=dotcom&amp;cntry_code=us&amp;language=english&amp;tracknumbers=&apos;&amp;left(Fed_Ex_Tracking__c,12), &apos;FedEx Tracking&apos;))</formula>
    <label>Fed Ex</label>
    <type>Text</type>
</CustomField>