force-app/main/default/objects/Eval_Request__c/fields/Fed_Ex_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Fed_Ex_Tracking__c</fullName>
    <label>Fed Ex Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>