force-app/main/default/objects/Eval_Request__c/fields/Force_Outbound_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Force_Outbound_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used as back up so admin and force the agreement to be sent out in case an error occured</description>
    <label>Force Outbound Agreement</label>
    <type>Checkbox</type>
</CustomField>