force-app/main/default/objects/Eval_Request__c/fields/GovEd_Account_Waive_Agreement__c.field-meta.xml
<CustomField>
    <fullName>GovEd_Account_Waive_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Billing Account is a GovEd End User account, the waiver can be waived. by checking this box</description>
    <inlineHelpText>If the Billing Account is a GovEd End User account, the waiver can be waived. by checking this box</inlineHelpText>
    <label>GovEd Account Waive Agreement</label>
    <type>Checkbox</type>
</CustomField>