force-app/main/default/objects/Eval_Request__c/fields/Inactive_Eval_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Eval_Owner__c</fullName>
    <formula>Evaluation_Owner__r.Active_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Eval Owner</label>
    <type>Checkbox</type>
</CustomField>