force-app/main/default/objects/Eval_Request__c/fields/IT_Email__c.field-meta.xml
<CustomField>
    <fullName>IT_Email__c</fullName>
    <defaultValue>&quot;Billy.Lee@viewsonic.com&quot;</defaultValue>
    <label>IT Email</label>
    <type>Email</type>
</CustomField>