force-app/main/default/objects/Eval_Request__c/fields/Item_s_Returned__c.field-meta.xml
<CustomField>
    <fullName>Item_s_Returned__c</fullName>
    <description>Are all eval items returned?</description>
    <formula>of_Eval_Units_Returned__c  =  of_Requested_Eval_Units__c &amp;&amp; NOT(of_Eval_Units_Returned__c = 0) &amp;&amp; NOT(of_Requested_Eval_Units__c = 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item(s) Returned</label>
    <type>Checkbox</type>
</CustomField>