force-app/main/default/objects/Eval_Request__c/fields/Item_s_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Item_s_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item(s) Shipped</label>
    <type>Checkbox</type>
</CustomField>