force-app/main/default/objects/Eval_Request__c/fields/Large_Format_Request__c.field-meta.xml
<CustomField>
    <fullName>Large_Format_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This gets updated from a workflow rule in which any large format over 70 inches will be sent through VP approval Process</description>
    <label>Large Format Request</label>
    <type>Checkbox</type>
</CustomField>