force-app/main/default/objects/Eval_Request__c/fields/Latest_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Ship_Date__c</fullName>
    <description>Date that latest PUD was created. It triggers returns dates and emails for eval request process</description>
    <inlineHelpText>Date that latest PUD was created. It triggers returns dates and emails for eval request process</inlineHelpText>
    <label>Latest Ship Date</label>
    <summarizedField>Eval_Unit_Details__c.CreatedDate</summarizedField>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>