force-app/main/default/objects/Eval_Request__c/fields/Locked_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Locked_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked for Approval</label>
    <type>Checkbox</type>
</CustomField>