force-app/main/default/objects/Eval_Request__c/fields/Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>Manager_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eval Requests (Manager Contact)</relationshipLabel>
    <relationshipName>Eval_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>