force-app/main/default/objects/Eval_Request__c/fields/ManagerID__c.field-meta.xml
<CustomField>
    <fullName>ManagerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>user id for manager used for manager emails sent weekly</description>
    <label>ManagerID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>