force-app/main/default/objects/Eval_Request__c/fields/Managers_Email__c.field-meta.xml
<CustomField>
    <fullName>Managers_Email__c</fullName>
    <label>Managers Email</label>
    <type>Email</type>
</CustomField>