force-app/main/default/objects/Eval_Request__c/fields/Missing_Info_Lightnning__c.field-meta.xml
<CustomField>
    <fullName>Missing_Info_Lightnning__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Info Lightnning</label>
    <type>Text</type>
</CustomField>