force-app/main/default/objects/Eval_Request__c/fields/Missing_Information__c.field-meta.xml
<CustomField>
    <fullName>Missing_Information__c</fullName>
    <formula>null</formula>
    <label>Missing Information</label>
    <type>Text</type>
</CustomField>