force-app/main/default/objects/Eval_Request__c/fields/Name_of_Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Trade_Show__c</fullName>
    <inlineHelpText>Name of the Trade show(s) This will be used for.</inlineHelpText>
    <label>Name of Trade Show</label>
    <length>100</length>
    <type>Text</type>
</CustomField>