force-app/main/default/objects/Eval_Request__c/fields/New_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Return_Date__c</fullName>
    <formula>if(text( Eval_Type__c )= &apos;ViewSonic Sales Rep Eval&apos;,  null ,
if(text(Eval_Type__c) =&apos;Reseller Demo&apos; , Latest_Ship_Date__c +185,
if(ispickval(Eval_Type__c,&quot;Write-Off&quot;), null,
if(Product_Class__c = 1, Latest_Ship_Date__c +185, 
Latest_Ship_Date__c +95 ))))</formula>
    <label>New Return Date</label>
    <type>Date</type>
</CustomField>