force-app/main/default/objects/Eval_Request__c/fields/No_Credit_Card_Eval_Agreement__c.field-meta.xml
<CustomField>
    <fullName>No_Credit_Card_Eval_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you wish to have no agreement sent</description>
    <label>No Credit Card Eval Agreement</label>
    <type>Checkbox</type>
</CustomField>