force-app/main/default/objects/Eval_Request__c/fields/No_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>No_Opp_Name__c</fullName>
    <formula>isblank( Opportunity_Name__c )</formula>
    <label>No Opp Name</label>
    <type>Checkbox</type>
</CustomField>