force-app/main/default/objects/Eval_Request__c/fields/of_Eval_Units_Returned__c.field-meta.xml
<CustomField>
    <fullName>of_Eval_Units_Returned__c</fullName>
    <label># of Eval Units Returned</label>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Status__c</field>
        <operation>equals</operation>
        <value>Product Returned, Purchased/Invoiced, Write-off</value>
    </summaryFilterItems>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>