force-app/main/default/objects/Eval_Request__c/fields/of_Requested_Eval_Units__c.field-meta.xml
<CustomField>
    <fullName>of_Requested_Eval_Units__c</fullName>
    <label># of Shipped Eval Units</label>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>