force-app/main/default/objects/Eval_Request__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Eval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>