force-app/main/default/objects/Eval_Request__c/fields/Opportunity_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_f__c</fullName>
    <formula>Opportunity_Name__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>