force-app/main/default/objects/Eval_Request__c/fields/Opportunity_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Revenue__c</fullName>
    <formula>Opportunity_Name__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>