force-app/main/default/objects/Eval_Request__c/fields/Oracle_Ship_City__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Ship_City__c</fullName>
    <label>Oracle Ship City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>