force-app/main/default/objects/Eval_Request__c/fields/Oracle_Ship_Country__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Ship_Country__c</fullName>
    <label>Oracle Ship Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>