force-app/main/default/objects/Eval_Request__c/fields/Oracle_Ship_State__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Ship_State__c</fullName>
    <label>Oracle Ship State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>