force-app/main/default/objects/Eval_Request__c/fields/Oracle_Ship_Street__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Ship_Street__c</fullName>
    <label>Oracle Ship Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>