force-app/main/default/objects/Eval_Request__c/fields/Oracle_Ship_Zip__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Ship_Zip__c</fullName>
    <label>Oracle Ship Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>