force-app/main/default/objects/Eval_Request__c/fields/Outstanding_Evals__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Evals__c</fullName>
    <label>Outstanding Evals</label>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Product Returned, Purchased/Invoiced, Write-off</value>
    </summaryFilterItems>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>