force-app/main/default/objects/Eval_Request__c/fields/Overwrite_Eval_Owner__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Eval_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overwrite Eval Owner</label>
    <type>Checkbox</type>
</CustomField>