force-app/main/default/objects/Eval_Request__c/fields/Owner_and_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_and_User__c</fullName>
    <formula>if( Evaluation_Owner__c  =   $User.Contact_ID__c  ,true,
if( $UserRole.Id= &apos;00EA0000000MBWl&apos;,true,
false))</formula>
    <label>Owner and User</label>
    <type>Checkbox</type>
</CustomField>