force-app/main/default/objects/Eval_Request__c/fields/ownerConId__c.field-meta.xml
<CustomField>
    <fullName>ownerConId__c</fullName>
    <formula>Owner:User.Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ownerConId</label>
    <type>Text</type>
</CustomField>