force-app/main/default/objects/Eval_Request__c/fields/OwnerIDUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerIDUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner  id based on user object differs from contact object, which is for master detail relationship. Which provides roll up fields for past due and outstanding evaluations.</description>
    <label>OwnerIDUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eval_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>