force-app/main/default/objects/Eval_Request__c/fields/Past_Due_Check__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Check__c</fullName>
    <formula>text(Product_Status__c ) = &apos;Past Due&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Check</label>
    <type>Checkbox</type>
</CustomField>