force-app/main/default/objects/Eval_Request__c/fields/Prior_Evals_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Prior_Evals_Outstanding__c</fullName>
    <label>Prior Evals Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>