force-app/main/default/objects/Eval_Request__c/fields/Product1__c.field-meta.xml
<CustomField>
    <fullName>Product1__c</fullName>
    <formula>Product_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product1</label>
    <type>Text</type>
</CustomField>