force-app/main/default/objects/Eval_Request__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <formula>Product_Name_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product2</label>
    <type>Text</type>
</CustomField>