force-app/main/default/objects/Eval_Request__c/fields/Product3__c.field-meta.xml
<CustomField>
    <fullName>Product3__c</fullName>
    <formula>Product_Name_3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product3</label>
    <type>Text</type>
</CustomField>