force-app/main/default/objects/Eval_Request__c/fields/Product_1_Total__c.field-meta.xml
<CustomField>
    <fullName>Product_1_Total__c</fullName>
    <formula>Product_Name__r.Evaluation_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product 1 Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>