force-app/main/default/objects/Eval_Request__c/fields/Product_2_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_2_Cost__c</fullName>
    <formula>Product_Name_2__r.Evaluation_Price__c * Quantity_2__c</formula>
    <label>Product 2 Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>