force-app/main/default/objects/Eval_Request__c/fields/Product_2nd_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_2nd_Shipment_Date__c</fullName>
    <label>Product 2nd Shipment Date</label>
    <type>DateTime</type>
</CustomField>