force-app/main/default/objects/Eval_Request__c/fields/Product_3_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_3_Cost__c</fullName>
    <formula>Product_Name_3__r.Evaluation_Price__c * Quantity_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product 3 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>