force-app/main/default/objects/Eval_Request__c/fields/Product_4_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_4_Cost__c</fullName>
    <formula>Product_Name_4__r.Evaluation_Price__c * Quantity_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product 4 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>