force-app/main/default/objects/Eval_Request__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <description>Takes the 2 digit sku of all products and determines if any is e-poster, commercial display, or IFD. This determines if the eval is 90 day or 180 day</description>
    <label>Product Class</label>
    <summarizedField>Eval_Unit_Details__c.Product_Class__c</summarizedField>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Product_Class__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>