force-app/main/default/objects/Eval_Request__c/fields/Product_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost_Total__c</fullName>
    <formula>Product_1_Total__c + Product_2_Cost__c + Product_3_Cost__c + Product_4_Cost__c + Product_5_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>