force-app/main/default/objects/Eval_Request__c/fields/Product_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This is a bundle, you must select a non bundle product.</errorMessage>
        <filterItems>
            <field>Product2.Bundle__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Eval Requests (Product Name)</relationshipLabel>
    <relationshipName>Eval_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>