force-app/main/default/objects/Eval_Request__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <errorMessage>This is a bundle, you must select a non bundle product.

Also Products cannot have -2, -3,-4 in IFP Name. Please use the non dash skus.</errorMessage>
        <filterItems>
            <field>Product2.Bundle__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Eval Requests (Product Name)</relationshipLabel>
    <relationshipName>Eval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>