force-app/main/default/objects/Eval_Request__c/fields/Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Quantity__c</fullName>
    <description>For the Approval email to Sales Ops with products and quantities. Not needed for page layout..</description>
    <formula>&apos;Product: &apos;&amp; Product_Name__r.Name&amp;br()&amp;
&apos;Quantity: &apos;&amp;  text(Quantity__c) &amp;br()&amp;
&apos;Product: &apos;&amp; Product_Name_2__r.Name&amp;br()&amp;
&apos;Quantity: &apos;&amp; text(Quantity_2__c) &amp;br()&amp;
&apos;Product: &apos;&amp; Product_Name_3__r.Name&amp;br()&amp;
&apos;Quantity: &apos;&amp; text(Quantity_3__c) &amp;br()&amp;
&apos;Product: &apos;&amp; Product_Name_4__r.Name&amp;br()&amp;
&apos;Quantity: &apos;&amp; text(Quantity_4__c) &amp;br()&amp;
&apos;Product: &apos;&amp; Product_Name_5__r.Name&amp;br()&amp;
&apos;Quantity: &apos;&amp; text(Quantity_5__c) &amp;br()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product &amp; Quantity</label>
    <type>Text</type>
</CustomField>