force-app/main/default/objects/Eval_Request__c/fields/Product_Unit_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_Shipment_Date__c</fullName>
    <label>Product Unit Shipment Date</label>
    <type>DateTime</type>
</CustomField>