force-app/main/default/objects/Eval_Request__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <formula>Product_Name__r.Name  &amp;br()&amp; Product_Name_2__r.Name&amp;br() &amp;Product_Name_3__r.Name&amp;br()&amp;Product_Name_4__r.Name &amp;br()&amp; Product_Name_5__r.Name</formula>
    <inlineHelpText>List of all Products on the request. Used for Approval Processes</inlineHelpText>
    <label>Products</label>
    <type>Text</type>
</CustomField>