force-app/main/default/objects/Eval_Request__c/fields/Products_List__c.field-meta.xml
<CustomField>
    <fullName>Products_List__c</fullName>
    <formula>Product_Name__r.Name
&amp;if(not(isblank(Product_Name_2__r.Name))= true,&apos; || &apos;&amp;Product_Name_2__r.Name,&apos;&apos;)
&amp;if(not(isblank(Product_Name_3__r.Name))= true,&apos; || &apos;&amp;Product_Name_3__r.Name,&apos;&apos;)
&amp;if(not(isblank(Product_Name_4__r.Name))= true,&apos; || &apos;&amp;Product_Name_4__r.Name,&apos;&apos;)
&amp;if(not(isblank(Product_Name_5__r.Name))= true,&apos; || &apos;&amp;Product_Name_5__r.Name,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products List</label>
    <type>Text</type>
</CustomField>