force-app/main/default/objects/Eval_Request__c/fields/Products_Requested__c.field-meta.xml
<CustomField>
    <fullName>Products_Requested__c</fullName>
    <description>List of Products Requested. Not necessary shipped out as that could change due to inventory and change requests</description>
    <label>Products Requested</label>
    <type>TextArea</type>
</CustomField>