force-app/main/default/objects/Eval_Request__c/fields/Quantity_4__c.field-meta.xml
<CustomField>
    <fullName>Quantity_4__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>