force-app/main/default/objects/Eval_Request__c/fields/Quote_Billing_Info__c.field-meta.xml
<CustomField>
    <fullName>Quote_Billing_Info__c</fullName>
    <description>The quote request flow will input this information and display on the VF email template when a PO or signed Quote exists.</description>
    <label>Quote Billing Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>