force-app/main/default/objects/Eval_Request__c/fields/Quote_Info__c.field-meta.xml
<CustomField>
    <fullName>Quote_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Info</label>
    <type>Checkbox</type>
</CustomField>