force-app/main/default/objects/Eval_Request__c/fields/Quote_Send__c.field-meta.xml
<CustomField>
    <fullName>Quote_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that triggers the outbound message of conga and the quote template.</description>
    <label>Quote Send</label>
    <type>Checkbox</type>
</CustomField>