force-app/main/default/objects/Eval_Request__c/fields/Quotedocid__c.field-meta.xml
<CustomField>
    <fullName>Quotedocid__c</fullName>
    <description>gets doc id from a flow and then passes to email button so that the attactment quote last sent to customer will be added to eval teams attachments.</description>
    <label>Quotedocid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>