force-app/main/default/objects/Eval_Request__c/fields/Quotes__c.field-meta.xml
<CustomField>
    <fullName>Quotes__c</fullName>
    <label>Quotes</label>
    <summaryForeignKey>Eval_Quote__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>