force-app/main/default/objects/Eval_Request__c/fields/Reason_for_Extension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Extension__c</fullName>
    <label>Reason for Extension</label>
    <length>200</length>
    <type>Text</type>
</CustomField>