force-app/main/default/objects/Eval_Request__c/fields/Reason_for_No_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_No_Credit_Card__c</fullName>
    <description>List for reasons to waive credit card agreement. Goes on the VF Email approval to Directors</description>
    <inlineHelpText>List for reasons to waive credit card agreement. Goes on the VF Email approval to Directors</inlineHelpText>
    <label>Reason for No Credit Card/ No Agreement</label>
    <length>200</length>
    <type>Text</type>
</CustomField>