force-app/main/default/objects/Eval_Request__c/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <label>Reason for Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>