force-app/main/default/objects/Eval_Request__c/fields/Reason_for_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Write_Off__c</fullName>
    <label>Reason for Write-Off</label>
    <length>200</length>
    <type>Text</type>
</CustomField>