force-app/main/default/objects/Eval_Request__c/fields/RejectedEmail__c.field-meta.xml
<CustomField>
    <fullName>RejectedEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RejectedEmail</label>
    <type>Checkbox</type>
</CustomField>