force-app/main/default/objects/Eval_Request__c/fields/RejectionComments__c.field-meta.xml
<CustomField>
    <fullName>RejectionComments__c</fullName>
    <label>RejectionComments</label>
    <type>TextArea</type>
</CustomField>