force-app/main/default/objects/Eval_Request__c/fields/Request_Extension__c.field-meta.xml
<CustomField>
    <fullName>Request_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mass extension requests jan 2016</description>
    <label>Request Extension</label>
    <type>Checkbox</type>
</CustomField>