force-app/main/default/objects/Eval_Request__c/fields/Request_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Request_Write_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Write Off</label>
    <type>Checkbox</type>
</CustomField>