force-app/main/default/objects/Eval_Request__c/fields/Reseller_Account__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eval Requests (Reseller Account)</relationshipLabel>
    <relationshipName>Eval_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>