force-app/main/default/objects/Eval_Request__c/fields/Reseller_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reseller Contact Name</description>
    <label>Reseller Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eval Requests (Reseller Contact Name)</relationshipLabel>
    <relationshipName>Eval_Requests_Reseller</relationshipName>
    <type>Lookup</type>
</CustomField>