force-app/main/default/objects/Eval_Request__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <formula>if(text(Eval_Type__c) =&apos;Reseller Demo&apos; , 
Latest_Ship_Date__c  + 95 , 
if(ispickval(Eval_Type__c,&quot;Write-Off&quot;),  null , 
Latest_Ship_Date__c  + 35 ))</formula>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>