force-app/main/default/objects/Eval_Request__c/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <formula>text(RMA_From_Details__c)</formula>
    <label>RMA #</label>
    <type>Text</type>
</CustomField>