force-app/main/default/objects/Eval_Request__c/fields/RMA_From_Details__c.field-meta.xml
<CustomField>
    <fullName>RMA_From_Details__c</fullName>
    <label>RMA # From Details</label>
    <summarizedField>Eval_Unit_Details__c.RMA_For_Email__c</summarizedField>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>