force-app/main/default/objects/Eval_Request__c/fields/RMAtext__c.field-meta.xml
<CustomField>
    <fullName>RMAtext__c</fullName>
    <externalId>true</externalId>
    <label>RMA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>