force-app/main/default/objects/Eval_Request__c/fields/Sales_Rep_Billing__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Billing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eval_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>