force-app/main/default/objects/Eval_Request__c/fields/Sales_Rep_Evals_Projectors__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Evals_Projectors__c</fullName>
    <label>Evals Projectors</label>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Status__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Product_TypeText__c</field>
        <operation>equals</operation>
        <value>Projectors</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Product_Type_Text__c</field>
        <operation>notEqual</operation>
        <value>ACCESSORIES,MNT,MP,NA,P &amp; A,SVC,WAT</value>
    </summaryFilterItems>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>