force-app/main/default/objects/Eval_Request__c/fields/Sales_Rep_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Shipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Shipping</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eval_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>