force-app/main/default/objects/Eval_Request__c/fields/Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Rate__c</fullName>
    <description>Sales Tax based on Billing Address on Quote</description>
    <label>Sales Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>