force-app/main/default/objects/Eval_Request__c/fields/SalesRep_Eval__c.field-meta.xml
<CustomField>
    <fullName>SalesRep_Eval__c</fullName>
    <formula>text(Eval_Type__c) == &apos;ViewSonic Sales Rep Eval&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesRep Eval</label>
    <type>Checkbox</type>
</CustomField>