force-app/main/default/objects/Eval_Request__c/fields/SFDC_Email_A__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Email_A__c</fullName>
    <formula>&apos;jason.orbison@viewsonic.com&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDC Email A</label>
    <type>Text</type>
</CustomField>